--- a/side-project/index.html
+++ b/side-project/index.html
@@ -5,18 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu-Portifolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaqueries.css">
 </head>
 <body>
     <nav id="desktop-nav">
         <div class="logo">Douglas Almeida</div>
         <div>
             <ul class="nav-links">
-                <li><a href="#about">about</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#experience">experience</a></li>
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
         </div>
+    </nav>
+    <nav id="picanha-nav">
+        <div class="logo">Douglas Almeida</div>
+        <div class="picanha-menu">  
+            <div class="picanha-icon" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="menu-links">
+                <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#experience" onclick="toggleMenu()">experience</a></li>
+                <li><a href="#projects" onclick="toggleMenu()">projects</a></li>
+                <li><a href="#contact" onclick="toggleMenu()">contact</a></li>
+            </div>
+        </div>
+    </nav>
+    <script src="script.js"></script>
 </body>
 </html>
